# kokkos-gol

./: CMakeLists.txt  README.md
src/: game_of_life.cpp
